--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>RadicleMC | Lifesteal PvP Network</title>
-<link rel="stylesheet" href="style.css">
+
+<!-- Tailwind & Feather Icons -->
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+
+<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+<!-- Custom CSS -->
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- NAVBAR -->
-<nav class="fixed top-0 left-0 w-full z-50 px-8 py-5 flex justify-between items-center bg-transparent">
+<nav>
   <div class="flex items-center space-x-2">
     <a href="#home" class="flex items-center space-x-2">
       <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-14">
@@ -31,67 +37,65 @@
 </nav>
 
 <!-- HERO -->
-<section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-32 overflow-hidden bg-black">
+<section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-32 overflow-hidden">
   <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6">
-  <h1 class="font-poppins text-7xl font-bold uppercase mb-6 gradient-text">GROW. FIGHT. RISE.</h1>
-  <p class="text-xl md:text-2xl max-w-2xl mb-10 gradient-text-alt">
-    Welcome to <span class="font-semibold text-yellow-400">RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.
-  </p>
+  <h1>GROW. FIGHT. RISE.</h1>
+  <p>Welcome to <span class="font-semibold">RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.</p>
 
-  <div class="flex flex-wrap justify-center gap-4 relative z-10">
+  <div class="flex flex-wrap justify-center gap-4">
     <button id="playNowBtn" class="btn-gold"><i data-feather="play" class="mr-2"></i> Play Now</button>
     <a href="https://discord.gg/FsC2cz4cp4" target="_blank" class="btn-gold"><i data-feather="message-circle" class="mr-2"></i> Join Discord</a>
   </div>
 
-  <div class="mt-14 relative z-10">
-    <div id="playerCount" class="player-count-display">
-      <span class="inline-block w-3 h-3 bg-red-500 rounded-full mr-2 animate-ping"></span>
-      0 Players Online
+  <div class="mt-14">
+    <div class="player-count">
+      <span id="playerCount">Loading...</span>
     </div>
   </div>
 
   <!-- Floating icons -->
-  <i data-feather="heart" class="floating-icon" style="left:20%; top:70%; width:30px; height:30px; color:#FF4D4D;"></i>
-  <i data-feather="sword" class="floating-icon" style="left:50%; top:80%; width:30px; height:30px; color:#FFD700; animation-delay:1s;"></i>
-  <i data-feather="star" class="floating-icon" style="left:70%; top:75%; width:25px; height:25px; color:#FFB347; animation-delay:2s;"></i>
+  <i data-feather="heart" class="floating-icon" style="left:20%; top:70%;"></i>
+  <i data-feather="sword" class="floating-icon" style="left:50%; top:80%;"></i>
+  <i data-feather="star" class="floating-icon" style="left:70%; top:75%;"></i>
 </section>
 
 <!-- PLAY NOW MODAL -->
 <div id="modal" class="modal-bg">
   <div class="modal-content">
-    <button id="closeModal" class="modal-close-btn"><i data-feather="x" class="w-6 h-6"></i></button>
-    <h2 class="font-bold text-2xl mb-4 text-brown-dark">Connect to RadicleMC</h2>
-    <p class="mb-4 text-brown-light">Copy the server IP to join:</p>
-    <input id="serverIp" type="text" value="nl-01.freezehost.pro:11630" readonly class="w-full px-3 py-2 border border-yellow-500 rounded-lg text-center mb-4 bg-yellow-50 text-yellow-700">
-    <button id="copyBtn" class="btn-gold w-full flex justify-center items-center"><i data-feather="copy" class="mr-2"></i> Copy IP</button>
+    <button id="closeModal" class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">
+      <i data-feather="x" class="w-6 h-6"></i>
+    </button>
+    <h2>Connect to RadicleMC</h2>
+    <p>Copy the server IP to join:</p>
+    <input id="serverIp" type="text" value="nl-01.freezehost.pro:11630" readonly>
+    <button id="copyBtn" class="btn-gold w-full flex justify-center items-center">
+      <i data-feather="copy" class="mr-2"></i> Copy IP
+    </button>
   </div>
 </div>
 
-<!-- ABOUT / FEATURES -->
-<section id="about" class="py-24 text-center bg-black">
-  <h2 class="section-title">The Ultimate Lifesteal Experience</h2>
-  <p class="section-subtitle">
-    RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.
-  </p>
-
+<!-- ABOUT -->
+<section id="about">
+  <h2>The Ultimate Lifesteal Experience</h2>
+  <p>RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.</p>
   <div class="grid md:grid-cols-4 gap-10 mt-16">
     <div class="feature-card">
-      <i data-feather="heart" class="feature-icon w-10 h-10 mb-4 mx-auto"></i>
+      <i data-feather="heart" class="w-10 h-10 mb-4 mx-auto"></i>
       <h3>Lifesteal Combat</h3>
       <p>Steal hearts from enemies and grow stronger every fight.</p>
     </div>
     <div class="feature-card">
-      <i data-feather="users" class="feature-icon w-10 h-10 mb-4 mx-auto"></i>
+      <i data-feather="users" class="w-10 h-10 mb-4 mx-auto"></i>
       <h3>Duels & Clans</h3>
       <p>Form clans and fight in dynamic multiplayer battles.</p>
     </div>
     <div class="feature-card">
-      <i data-feather="gift" class="feature-icon w-10 h-10 mb-4 mx-auto"></i>
+      <i data-feather="gift" class="w-10 h-10 mb-4 mx-auto"></i>
       <h3>Crates & Rewards</h3>
       <p>Earn rare loot and exclusive items through challenges.</p>
     </div>
     <div class="feature-card">
-      <i data-feather="award" class="feature-icon w-10 h-10 mb-4 mx-auto"></i>
+      <i data-feather="award" class="w-10 h-10 mb-4 mx-auto"></i>
       <h3>Seasonal Leaderboards</h3>
       <p>Climb the ranks and prove your dominance each season.</p>
     </div>
@@ -99,8 +103,8 @@
 </section>
 
 <!-- GAME MODES -->
-<section id="modes" class="py-24 text-center bg-black">
-  <h2 class="section-title">Game Modes</h2>
+<section id="modes">
+  <h2>Game Modes</h2>
   <div class="grid md:grid-cols-3 gap-8 mt-12">
     <div class="game-mode-card">
       <i data-feather="users" class="w-12 h-12 mb-4 mx-auto"></i>
@@ -121,31 +125,31 @@
 </section>
 
 <!-- COMMUNITY -->
-<section id="community" class="py-24 text-center bg-black">
-  <h2 class="section-title">Join Our Thriving Community</h2>
+<section id="community">
+  <h2>Join Our Thriving Community</h2>
   <div class="grid md:grid-cols-2 gap-8 mt-12 max-w-3xl mx-auto">
     <div class="community-card">
-      <div class="text-3xl font-bold mb-2">5,000+</div>
+      <div>5,000+</div>
       <div>Discord Members</div>
     </div>
     <div class="community-card">
-      <div class="text-3xl font-bold mb-2">10M+</div>
+      <div>10M+</div>
       <div>Hearts Stolen</div>
     </div>
   </div>
-  <a href="https://discord.gg/FsC2cz4cp4" target="_blank" class="btn-gold mt-12 inline-flex items-center"><i data-feather="message-circle" class="mr-2"></i> Join Our Discord</a>
+  <a href="https://discord.gg/FsC2cz4cp4" target="_blank" class="btn-gold mt-12 inline-flex items-center">
+    <i data-feather="message-circle" class="mr-2"></i> Join Our Discord
+  </a>
 </section>
 
 <!-- FOOTER -->
-<footer class="footer bg-black text-center">
-  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-20 mx-auto mb-4">
-  <p class="text-yellow-700 mb-6">RadicleMC Lifesteal PvP Network — grow stronger with every battle and every heart you claim.</p>
-  <p class="text-yellow-600 mt-6 text-sm">&copy; 2025 RadicleMC. All rights reserved.</p>
+<footer>
+  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo">
+  <p>RadicleMC Lifesteal PvP Network — grow stronger with every battle and every heart you claim.</p>
+  <p>&copy; 2025 RadicleMC. All rights reserved.</p>
 </footer>
 
+<!-- Custom JS -->
 <script src="script.js"></script>
-<script>
-feather.replace();
-</script>
 </body>
 </html>
