--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RadicleMC | Lifesteal PvP Network</title>
-
-<!-- Tailwind & Feather Icons -->
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-
-<!-- Custom CSS -->
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RadicleMC | Lifesteal PvP Network</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- NAVBAR -->
-<nav>
+<nav class="fixed top-0 left-0 w-full z-50 px-8 py-5 flex justify-between items-center bg-transparent">
   <div class="flex items-center space-x-2">
     <a href="#home" class="flex items-center space-x-2">
       <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-14">
@@ -30,126 +24,84 @@
     <a href="#about" class="scroll-link hover:text-yellow-400">About</a>
     <a href="#modes" class="scroll-link hover:text-yellow-400">Modes</a>
     <a href="#community" class="scroll-link hover:text-yellow-400">Community</a>
-    <a href="https://discord.gg/FsC2cz4cp4" target="_blank" class="text-yellow-600 font-semibold flex items-center">
-      <i data-feather="message-circle" class="w-5 h-5 mr-1"></i> Discord
-    </a>
   </div>
 </nav>
 
 <!-- HERO -->
-<section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-32 overflow-hidden">
-  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6">
-  <h1>GROW. FIGHT. RISE.</h1>
-  <p>Welcome to <span class="font-semibold">RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.</p>
+<section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-32 overflow-hidden fade-slide">
+  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6 fade-slide">
+  <h1 class="font-poppins text-7xl font-bold uppercase mb-6 fade-slide"
+      style="background: linear-gradient(90deg, #FFD700, #B8860B); -webkit-background-clip: text; color: transparent;">
+    GROW. FIGHT. RISE.
+  </h1>
+  <p class="text-xl md:text-2xl max-w-2xl mb-10 fade-slide" style="background: linear-gradient(90deg, #DAA520, #FFD700); -webkit-background-clip: text; color: transparent;">
+    Welcome to <span class="font-semibold" style="color:#FFD700">RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.
+  </p>
 
-  <div class="flex flex-wrap justify-center gap-4">
+  <div class="flex flex-wrap justify-center gap-4 fade-slide">
     <button id="playNowBtn" class="btn-gold"><i data-feather="play" class="mr-2"></i> Play Now</button>
-    <a href="https://discord.gg/FsC2cz4cp4" target="_blank" class="btn-gold"><i data-feather="message-circle" class="mr-2"></i> Join Discord</a>
   </div>
 
-  <div class="mt-14">
-    <div class="player-count">
+  <div class="mt-14 relative z-10 fade-slide">
+    <div class="relative px-6 py-2 bg-yellow-700 text-yellow-50 rounded-full font-bold flex items-center shadow-md">
+      <span class="inline-block w-3 h-3 bg-red-500 rounded-full mr-2 animate-ping"></span>
       <span id="playerCount">Loading...</span>
     </div>
   </div>
-
-  <!-- Floating icons -->
-  <i data-feather="heart" class="floating-icon" style="left:20%; top:70%;"></i>
-  <i data-feather="sword" class="floating-icon" style="left:50%; top:80%;"></i>
-  <i data-feather="star" class="floating-icon" style="left:70%; top:75%;"></i>
 </section>
 
-<!-- PLAY NOW MODAL -->
-<div id="modal" class="modal-bg">
-  <div class="modal-content">
-    <button id="closeModal" class="absolute top-3 right-3 text-gray-500 hover:text-gray-800">
-      <i data-feather="x" class="w-6 h-6"></i>
-    </button>
-    <h2>Connect to RadicleMC</h2>
-    <p>Copy the server IP to join:</p>
-    <input id="serverIp" type="text" value="nl-01.freezehost.pro:11630" readonly>
-    <button id="copyBtn" class="btn-gold w-full flex justify-center items-center">
-      <i data-feather="copy" class="mr-2"></i> Copy IP
-    </button>
-  </div>
-</div>
-
 <!-- ABOUT -->
-<section id="about">
-  <h2>The Ultimate Lifesteal Experience</h2>
-  <p>RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.</p>
-  <div class="grid md:grid-cols-4 gap-10 mt-16">
-    <div class="feature-card">
-      <i data-feather="heart" class="w-10 h-10 mb-4 mx-auto"></i>
-      <h3>Lifesteal Combat</h3>
-      <p>Steal hearts from enemies and grow stronger every fight.</p>
-    </div>
-    <div class="feature-card">
-      <i data-feather="users" class="w-10 h-10 mb-4 mx-auto"></i>
-      <h3>Duels & Clans</h3>
-      <p>Form clans and fight in dynamic multiplayer battles.</p>
-    </div>
-    <div class="feature-card">
-      <i data-feather="gift" class="w-10 h-10 mb-4 mx-auto"></i>
-      <h3>Crates & Rewards</h3>
-      <p>Earn rare loot and exclusive items through challenges.</p>
-    </div>
-    <div class="feature-card">
-      <i data-feather="award" class="w-10 h-10 mb-4 mx-auto"></i>
-      <h3>Seasonal Leaderboards</h3>
-      <p>Climb the ranks and prove your dominance each season.</p>
-    </div>
-  </div>
+<section id="about" class="py-24 text-center fade-slide">
+  <h2 class="section-title">The Ultimate Lifesteal Experience</h2>
+  <p class="section-subtext">
+    RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.
+  </p>
 </section>
 
 <!-- GAME MODES -->
-<section id="modes">
-  <h2>Game Modes</h2>
+<section id="modes" class="py-24 text-center fade-slide">
+  <h2 class="section-title">Game Modes</h2>
   <div class="grid md:grid-cols-3 gap-8 mt-12">
-    <div class="game-mode-card">
-      <i data-feather="users" class="w-12 h-12 mb-4 mx-auto"></i>
-      <h3>PvP Arena</h3>
-      <p>Every player fights for dominance in open PvP battles.</p>
+    <div class="game-mode-card fade-slide">
+      <i data-feather="users" class="w-12 h-12 mb-4 mx-auto" style="color:#FFA500;"></i>
+      <h3 class="game-card-title">PvP Arena</h3>
+      <p class="game-card-desc">Every player fights for dominance in open PvP battles.</p>
     </div>
-    <div class="game-mode-card">
-      <i data-feather="activity" class="w-12 h-12 mb-4 mx-auto"></i>
-      <h3>Crystal PvP</h3>
-      <p>Collect crystals, gain power, and battle other players for rewards.</p>
+    <div class="game-mode-card fade-slide">
+      <i data-feather="activity" class="w-12 h-12 mb-4 mx-auto" style="color:#FFD700;"></i>
+      <h3 class="game-card-title">Crystal PvP</h3>
+      <p class="game-card-desc">Collect crystals, gain power, and battle other players for rewards.</p>
     </div>
-    <div class="game-mode-card">
-      <i data-feather="map" class="w-12 h-12 mb-4 mx-auto"></i>
-      <h3>Clan Wars</h3>
-      <p>Team up with your clan and dominate rival clans in strategic battles.</p>
+    <div class="game-mode-card fade-slide">
+      <i data-feather="map" class="w-12 h-12 mb-4 mx-auto" style="color:#DAA520;"></i>
+      <h3 class="game-card-title">Clan Wars</h3>
+      <p class="game-card-desc">Team up and dominate rival clans in strategic battles.</p>
     </div>
   </div>
 </section>
 
 <!-- COMMUNITY -->
-<section id="community">
-  <h2>Join Our Thriving Community</h2>
+<section id="community" class="py-24 text-center fade-slide">
+  <h2 class="section-title">Join Our Thriving Community</h2>
   <div class="grid md:grid-cols-2 gap-8 mt-12 max-w-3xl mx-auto">
-    <div class="community-card">
-      <div>5,000+</div>
-      <div>Discord Members</div>
+    <div class="community-card fade-slide">
+      <div class="text-3xl font-bold mb-2" style="color:#8B4513;">5,000+</div>
+      <div style="color:#A0522D;">Discord Members</div>
     </div>
-    <div class="community-card">
-      <div>10M+</div>
-      <div>Hearts Stolen</div>
+    <div class="community-card fade-slide">
+      <div class="text-3xl font-bold mb-2" style="color:#8B4513;">10M+</div>
+      <div style="color:#A0522D;">Hearts Stolen</div>
     </div>
   </div>
-  <a href="https://discord.gg/FsC2cz4cp4" target="_blank" class="btn-gold mt-12 inline-flex items-center">
-    <i data-feather="message-circle" class="mr-2"></i> Join Our Discord
-  </a>
 </section>
 
 <!-- FOOTER -->
-<footer>
-  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo">
-  <p>RadicleMC Lifesteal PvP Network — grow stronger with every battle and every heart you claim.</p>
-  <p>&copy; 2025 RadicleMC. All rights reserved.</p>
+<footer class="py-12 text-center fade-slide">
+  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-20 mx-auto mb-4">
+  <p class="text-yellow-700 mb-6">RadicleMC Lifesteal PvP Network — grow stronger with every battle and every heart you claim.</p>
+  <p class="text-yellow-600 mt-6 text-sm">&copy; 2025 RadicleMC. All rights reserved.</p>
 </footer>
 
-<!-- Custom JS -->
 <script src="script.js"></script>
 </body>
 </html>
