--- a/index.html
+++ b/index.html
@@ -1,107 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RadicleMC | Lifesteal PvP Network</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <canvas id="particles"></canvas>
 
-<!-- NAVBAR -->
-<nav class="fixed top-0 left-0 w-full z-50 px-8 py-5 flex justify-between items-center bg-transparent">
-  <div class="flex items-center space-x-2">
-    <a href="#home" class="flex items-center space-x-2">
-      <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-14">
-      <span class="text-2xl font-bold text-yellow-600">RadicleMC</span>
-    </a>
-  </div>
-  <div class="space-x-6 font-medium hidden md:flex">
-    <a href="#home" class="scroll-link hover:text-yellow-400">Home</a>
-    <a href="#about" class="scroll-link hover:text-yellow-400">About</a>
-    <a href="#modes" class="scroll-link hover:text-yellow-400">Modes</a>
-    <a href="#community" class="scroll-link hover:text-yellow-400">Community</a>
-  </div>
-</nav>
+  <!-- NAVBAR -->
+  <nav class="fixed top-0 left-0 w-full z-50 px-8 py-5 flex justify-between items-center bg-transparent">
+    <div class="flex items-center space-x-2">
+      <a href="#home" class="flex items-center space-x-2">
+        <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-14">
+        <span class="text-2xl font-bold text-yellow-600">RadicleMC</span>
+      </a>
+    </div>
+    <div class="space-x-6 font-medium hidden md:flex">
+      <a href="#home" class="scroll-link hover:text-yellow-400">Home</a>
+      <a href="#about" class="scroll-link hover:text-yellow-400">About</a>
+      <a href="#modes" class="scroll-link hover:text-yellow-400">Modes</a>
+      <a href="#community" class="scroll-link hover:text-yellow-400">Community</a>
+    </div>
+  </nav>
 
-<!-- HERO -->
-<section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-32 overflow-hidden fade-slide">
-  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6 fade-slide">
-  <h1 class="font-poppins text-7xl font-bold uppercase mb-6 fade-slide"
+  <!-- HERO -->
+  <section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-32 overflow-hidden fade-slide">
+    <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6 fade-slide">
+    <h1 class="font-poppins text-7xl font-bold uppercase mb-6 fade-slide"
       style="background: linear-gradient(90deg, #FFD700, #B8860B); -webkit-background-clip: text; color: transparent;">
-    GROW. FIGHT. RISE.
-  </h1>
-  <p class="text-xl md:text-2xl max-w-2xl mb-10 fade-slide" style="background: linear-gradient(90deg, #DAA520, #FFD700); -webkit-background-clip: text; color: transparent;">
-    Welcome to <span class="font-semibold" style="color:#FFD700">RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.
-  </p>
+      GROW. FIGHT. RISE.
+    </h1>
+    <p class="text-xl md:text-2xl max-w-2xl mb-10 fade-slide" style="background: linear-gradient(90deg, #DAA520, #FFD700); -webkit-background-clip: text; color: transparent;">
+      Welcome to <span class="font-semibold" style="color:#FFD700">RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.
+    </p>
+    <div class="flex flex-wrap justify-center gap-4 fade-slide">
+      <button id="playNowBtn" class="btn-gold"><i data-feather="play" class="mr-2"></i> Play Now</button>
+    </div>
+    <div class="mt-14 relative z-10 fade-slide">
+      <div class="relative px-6 py-2 bg-yellow-700 text-yellow-50 rounded-full font-bold flex items-center shadow-md">
+        <span class="inline-block w-3 h-3 bg-red-500 rounded-full mr-2 animate-ping"></span>
+        <span id="playerCount">Loading...</span>
+      </div>
+    </div>
+  </section>
 
-  <div class="flex flex-wrap justify-center gap-4 fade-slide">
-    <button id="playNowBtn" class="btn-gold"><i data-feather="play" class="mr-2"></i> Play Now</button>
-  </div>
+  <!-- ABOUT -->
+  <section id="about" class="py-24 text-center fade-slide">
+    <h2 class="section-title">The Ultimate Lifesteal Experience</h2>
+    <p class="section-subtext">
+      RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.
+    </p>
+  </section>
 
-  <div class="mt-14 relative z-10 fade-slide">
-    <div class="relative px-6 py-2 bg-yellow-700 text-yellow-50 rounded-full font-bold flex items-center shadow-md">
-      <span class="inline-block w-3 h-3 bg-red-500 rounded-full mr-2 animate-ping"></span>
-      <span id="playerCount">Loading...</span>
+  <!-- GAME MODES -->
+  <section id="modes" class="py-24 text-center fade-slide">
+    <h2 class="section-title">Game Modes</h2>
+    <div class="grid md:grid-cols-3 gap-8 mt-12">
+      <div class="game-mode-card fade-slide">
+        <i data-feather="users" class="w-12 h-12 mb-4 mx-auto" style="color:#FFA500;"></i>
+        <h3 class="game-card-title">PvP Arena</h3>
+        <p class="game-card-desc">Every player fights for dominance in open PvP battles.</p>
+      </div>
+      <div class="game-mode-card fade-slide">
+        <i data-feather="activity" class="w-12 h-12 mb-4 mx-auto" style="color:#FFD700;"></i>
+        <h3 class="game-card-title">Crystal PvP</h3>
+        <p class="game-card-desc">Collect crystals, gain power, and battle other players for rewards.</p>
+      </div>
+      <div class="game-mode-card fade-slide">
+        <i data-feather="map" class="w-12 h-12 mb-4 mx-auto" style="color:#DAA520;"></i>
+        <h3 class="game-card-title">Clan Wars</h3>
+        <p class="game-card-desc">Team up and dominate rival clans in strategic battles.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- COMMUNITY -->
+  <section id="community" class="py-24 text-center fade-slide">
+    <h2 class="section-title">Join Our Thriving Community</h2>
+    <div class="grid md:grid-cols-2 gap-8 mt-12 max-w-3xl mx-auto">
+      <div class="community-card fade-slide">
+        <div class="text-3xl font-bold mb-2" style="color:#8B4513;">5,000+</div>
+        <div style="color:#A0522D;">Discord Members</div>
+      </div>
+      <div class="community-card fade-slide">
+        <div class="text-3xl font-bold mb-2" style="color:#8B4513;">10M+</div>
+        <div style="color:#A0522D;">Hearts Stolen</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- MODAL -->
+  <div id="modal" class="modal-bg">
+    <div class="modal-content">
+      <button id="closeModal" class="absolute top-3 right-3 text-gray-600 hover:text-gray-800"><i data-feather="x" class="w-6 h-6"></i></button>
+      <h2 class="font-bold text-2xl mb-4" style="color:#8B4513;">Connect to RadicleMC</h2>
+      <p class="mb-4" style="color:#D2B48C;">Copy the server IP to join:</p>
+      <input id="serverIp" type="text" value="play.radiclemc.net" readonly class="w-full px-3 py-2 border border-yellow-500 rounded-lg text-center mb-4 bg-yellow-50 text-yellow-700">
+      <button id="copyBtn" class="btn-gold w-full flex justify-center items-center"><i data-feather="copy" class="mr-2"></i> Copy IP</button>
     </div>
   </div>
-</section>
 
-<!-- ABOUT -->
-<section id="about" class="py-24 text-center fade-slide">
-  <h2 class="section-title">The Ultimate Lifesteal Experience</h2>
-  <p class="section-subtext">
-    RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.
-  </p>
-</section>
+  <!-- FOOTER -->
+  <footer class="py-12 text-center fade-slide">
+    <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-20 mx-auto mb-4">
+    <p class="text-yellow-700 mb-6">RadicleMC Lifesteal PvP Network — grow stronger with every battle and every heart you claim.</p>
+    <p class="text-yellow-600 mt-6 text-sm">&copy; 2025 RadicleMC. All rights reserved.</p>
+  </footer>
 
-<!-- GAME MODES -->
-<section id="modes" class="py-24 text-center fade-slide">
-  <h2 class="section-title">Game Modes</h2>
-  <div class="grid md:grid-cols-3 gap-8 mt-12">
-    <div class="game-mode-card fade-slide">
-      <i data-feather="users" class="w-12 h-12 mb-4 mx-auto" style="color:#FFA500;"></i>
-      <h3 class="game-card-title">PvP Arena</h3>
-      <p class="game-card-desc">Every player fights for dominance in open PvP battles.</p>
-    </div>
-    <div class="game-mode-card fade-slide">
-      <i data-feather="activity" class="w-12 h-12 mb-4 mx-auto" style="color:#FFD700;"></i>
-      <h3 class="game-card-title">Crystal PvP</h3>
-      <p class="game-card-desc">Collect crystals, gain power, and battle other players for rewards.</p>
-    </div>
-    <div class="game-mode-card fade-slide">
-      <i data-feather="map" class="w-12 h-12 mb-4 mx-auto" style="color:#DAA520;"></i>
-      <h3 class="game-card-title">Clan Wars</h3>
-      <p class="game-card-desc">Team up and dominate rival clans in strategic battles.</p>
-    </div>
-  </div>
-</section>
-
-<!-- COMMUNITY -->
-<section id="community" class="py-24 text-center fade-slide">
-  <h2 class="section-title">Join Our Thriving Community</h2>
-  <div class="grid md:grid-cols-2 gap-8 mt-12 max-w-3xl mx-auto">
-    <div class="community-card fade-slide">
-      <div class="text-3xl font-bold mb-2" style="color:#8B4513;">5,000+</div>
-      <div style="color:#A0522D;">Discord Members</div>
-    </div>
-    <div class="community-card fade-slide">
-      <div class="text-3xl font-bold mb-2" style="color:#8B4513;">10M+</div>
-      <div style="color:#A0522D;">Hearts Stolen</div>
-    </div>
-  </div>
-</section>
-
-<!-- FOOTER -->
-<footer class="py-12 text-center fade-slide">
-  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-20 mx-auto mb-4">
-  <p class="text-yellow-700 mb-6">RadicleMC Lifesteal PvP Network — grow stronger with every battle and every heart you claim.</p>
-  <p class="text-yellow-600 mt-6 text-sm">&copy; 2025 RadicleMC. All rights reserved.</p>
-</footer>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
