--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
 <!-- HERO -->
 <section id="home" class="hero">
-  <canvas id="particles"></canvas>
   <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="hero-logo">
   <h1 class="hero-title">GROW. FIGHT. RISE.</h1>
   <p class="hero-subtitle">Welcome to <span>RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.</p>
@@ -38,7 +37,7 @@
   <div class="player-count" id="playerCount">Loading players...</div>
 </section>
 
-<!-- PLAY NOW MODAL -->
+<!-- MODAL -->
 <div id="modal" class="modal">
   <div class="modal-content">
     <button id="closeModal"><i data-feather="x"></i></button>
@@ -51,7 +50,7 @@
 
 <!-- ABOUT -->
 <section id="about" class="section">
-  <h2 class="animated-text">The Ultimate Lifesteal Experience</h2>
+  <h2>The Ultimate Lifesteal Experience</h2>
   <p>RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.</p>
   <div class="cards">
     <div class="feature-card">
@@ -79,7 +78,7 @@
 
 <!-- GAME MODES -->
 <section id="modes" class="section">
-  <h2 class="animated-text">Game Modes</h2>
+  <h2>Game Modes</h2>
   <div class="cards">
     <div class="game-mode-card">
       <i data-feather="users"></i>
@@ -101,7 +100,7 @@
 
 <!-- COMMUNITY -->
 <section id="community" class="section">
-  <h2 class="animated-text">Join Our Thriving Community</h2>
+  <h2>Join Our Thriving Community</h2>
   <div class="cards community-cards">
     <div>
       <h3>5,000+</h3>
